--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,14 @@
 <body>
   <h1><%= heading %></h1>
   <p>You have nothing to purchase</p>
-  <button>Add Item</button>
+  <button onClick="addItem()">Add Item</button>
+  <div id="form-add-item">
+    <form action="/item" method="POST">
+      <input type="text" name="name" />
+      <button type="submit">Add</button>
+      <button>Cancel</button>
+    </form>
+  </div>
+  <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
