--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,15 @@
 </head>
 <body>
   <h1><%= heading %></h1>
-  <p>You have nothing to purchase</p>
+  <% if (items) { %>
+    <ul>
+      <% for(item of items) { %>
+        <li><%= item %></li>
+      <% } %>
+    </ul>
+  <% } else { %>
+    <p>You have nothing to purchase</p>
+  <% } %>
   <button onClick="addItem()">Add Item</button>
   <div id="form-add-item">
     <form action="/item" method="POST">
